--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><a href="index.html"><img src="logo.png" alt="Logo da Barbearia Alura"></a></h1>
+                <h1><a href="index.html"><img src="img/logo.png" alt="Logo da Barbearia Alura"></a></h1>
 
                 <nav>
                     <ul>
@@ -86,7 +86,7 @@
 
         </main>
         <footer>
-            <img src="logo-branco.png" alt="Logo da Barbearia Alura">
+            <img src="img/logo-branco.png" alt="Logo da Barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
